--- a/.devcontainer/docker-compose.devcontainer.yml
+++ b/.devcontainer/docker-compose.devcontainer.yml
@@ -6,6 +6,7 @@ services:
       context: ..
       args:
         - VARIANT=${NODE_VERSION:-16}-${OS_VERSION:-bullseye}
+        - FLAVOUR=${BASE_LANGUAGE:-javascript}
       dockerfile: .devcontainer/Dockerfile.devcontainer
     init: true
     container_name: ${COMPOSE_PROJECT_NAME:-workspace}-vscode
