--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,20 +1,30 @@
-version: '3'
+version: "3.8"
+
+volumes:
+  vscode-extensions:
+    external: true
+  thunder-client:
+    external: true
+
+networks:
+  default:
+    name: ${COMPOSE_PROJECT_NAME:-workspace}-net
 
 services:
   vscode:
+    init: true
     build:
       context: ..
       args:
         - VARIANT=${NODE_VERSION:-16}-${OS_VERSION:-bullseye}
-        - FLAVOUR=${BASE_LANGUAGE:-javascript}
-      dockerfile: .devcontainer/Dockerfile.devcontainer
-    init: true
+        - FLAVOUR=${BASE_LANGUAGE:-typescript}
+      dockerfile: .devcontainer/Dockerfile
     container_name: ${COMPOSE_PROJECT_NAME:-workspace}-vscode
+    command: sleep infinity
     environment:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
       - AWS_DEFAULT_REGION
-    command: sleep infinity
     networks:
       - default
     volumes:
@@ -22,11 +32,4 @@ services:
       - ~/.ssh:/root/.ssh
       - /var/run/docker.sock:/var/run/docker.sock
       - vscode-extensions:/root/.vscode-server/extensions
-
-volumes:
-  vscode-extensions:
-    external: true
-
-networks:
-  default:
-    name: ${COMPOSE_PROJECT_NAME:-workspace}-net
+      - thunder-client:/root/.vscode-server/data/User/globalStorage/rangav.vscode-thunder-client
